web: add UI for notification triggers
