# authentik/events/api/notification_trigger.py
@@ -16,6 +16,7 @@ class NotificationTriggerSerializer(ModelSerializer):
             "name",
             "transports",
             "severity",
+            "group",
         ]
 
 
